--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="orange">#FF5E00</color>
     <color name="red">#9E1318</color>
     <color name="yellow">#FFFFEB3B</color>
+    <color name="searchColour">#EAE8E8</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
