--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,6 +35,7 @@
                     android:layout_marginStart="60dp"
                     android:layout_marginTop="36dp"
                     android:text="UTM FOOD"
+                    android:textColor="@color/black"
                     android:textSize="22sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -86,6 +87,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="Categories"
+                android:textColor="@color/black"
                 android:textSize="18dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -107,6 +109,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="Popular Food"
+                android:textColor="@color/black"
                 android:textSize="18dp"
                 android:textStyle="bold"/>
 
@@ -125,6 +128,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="Popular Arked"
+                android:textColor="@color/black"
                 android:textSize="18dp"
                 android:textStyle="bold"/>
 
