--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -83,7 +83,7 @@
                 android:id="@+id/tvCategories"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="Categories"
@@ -97,7 +97,10 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvCategories"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp">
 
             </androidx.recyclerview.widget.RecyclerView>
 
@@ -105,7 +108,7 @@
                 android:id="@+id/tvPopularFood"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
+                android:layout_marginLeft="12dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="Popular Food"
@@ -116,7 +119,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvPopularFood"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp">
 
             </androidx.recyclerview.widget.RecyclerView>
 
@@ -124,7 +129,7 @@
                 android:id="@+id/tvPopularArked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
+                android:layout_marginLeft="12dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="Popular Arked"
@@ -135,7 +140,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvPopularArked"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp">
 
             </androidx.recyclerview.widget.RecyclerView>
 
