--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -100,7 +100,9 @@
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
                 android:paddingLeft="6dp"
-                android:paddingRight="6dp">
+                android:paddingRight="6dp"
+                tools:itemCount="1"
+                tools:listitem="@layout/list_item_categories">
 
             </androidx.recyclerview.widget.RecyclerView>
 
@@ -121,7 +123,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingLeft="6dp"
-                android:paddingRight="6dp">
+                android:paddingRight="6dp"
+                tools:itemCount="1"
+                tools:listitem="@layout/list_item_popularfood">
 
             </androidx.recyclerview.widget.RecyclerView>
 
@@ -142,7 +146,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingLeft="6dp"
-                android:paddingRight="6dp">
+                android:paddingRight="6dp"
+                tools:itemCount="1"
+                tools:listitem="@layout/list_item_populararked">
 
             </androidx.recyclerview.widget.RecyclerView>
 
